src/components/Menu/Menu.css
nav {
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  padding: 2rem;
  color: var(--base-100);
  display: flex;
  justify-content: space-between;
  align-items: flex-start;
  z-index: 999;

}

nav .nav-logo a {
  display: block;
  width: 4rem;
  mix-blend-mode: difference;
}

nav .nav-logo img {
  height: 4rem;
  object-fit: cover;
  filter: invert(1);
}

nav .nav-right {
  display: flex;
  gap: 1rem;
  align-items: center;
}

nav .nav-toggle {
  cursor: pointer;
}

nav .nav-toggle-wrapper,
nav .donation-btn {
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: center;
  height: 2.5rem;
  overflow: hidden;
  background-color: var(--base-200);
  border-radius: 0.5rem;
  clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
  z-index: 2;
  cursor: pointer;
  text-decoration: none;
}

nav .donation-btn {
  justify-content: center;
  min-width: 80px;
  mix-blend-mode: difference;
}

nav .open-label,
nav .close-label,
nav .donation-label {
  position: relative;
  text-transform: uppercase;
  font-family: "PP Pangram Sans";
  font-size: 0.9rem;
  font-weight: 900;
  -webkit-font-smoothing: antialiased;
  user-select: none;
  cursor: pointer;
  padding: 0.8rem;
  color: var(--base-400);
  margin: 0;
  will-change: transform;
}

nav .donation-label {
  color: var(--base-400);
}

nav .nav-toggle-wrapper .open-label {
  transform: translateY(0);
}

nav .nav-toggle-wrapper .close-label {
  transform: translateY(0);
}

.menu-overlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100svh;
  overflow: hidden;
  background-color: var(--base-400);
  color: var(--base-100);
  z-index: 1;
  will-change: clip-path;
  clip-path: polygon(0% 100%, 100% 100%, 100% 100%, 0% 100%);
}

.menu-overlay .menu-content {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  width: 100%;
  padding: 0 4rem;
  display: flex;
  justify-content: space-between;
  align-items: center;
  will-change: transform, opacity;
}

.menu-overlay .menu-col:nth-child(2) {
  text-align: right;
}

.menu-overlay .menu-col {
  position: relative;
  display: flex;
  flex-direction: column;
  gap: 1.5rem;
}

.menu-overlay .menu-img {
  position: absolute;
  top: 45%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 150px;
  aspect-ratio: 5/7;
  will-change: transform, opacity;
}

.menu-overlay .menu-img img {
  position: relative;
  width: 100%;
  height: 100%;
  border-radius: 0.5rem;
  object-fit: cover;
  transform: translateY(0);
  will-change: transform;
}

.menu-overlay .menu-link {
  position: relative;
  will-change: transform;
  overflow: hidden;
}

.menu-overlay .menu-link a {
  position: relative;
  color: var(--base-100);
  text-transform: uppercase;
  text-decoration: none;
  font-family: "Big Shoulders Display", sans-serif;
  font-size: 6rem;
  font-weight: 900;
  line-height: 0.9;
  letter-spacing: -0.125rem;
  display: inline-block;
  overflow: hidden;
}

.menu-overlay .menu-link a span:nth-child(2) {
  position: absolute;
  top: 0;
  left: 0;
}

.menu-overlay .char {
  position: relative;
  display: inline-block;
  will-change: transform;
}

nav .open-label {
  transform: translateY(0);
}

nav .close-label {
  transform: translateY(0);
}

@media (max-width: 1920px) {
  .menu-overlay .menu-link a {
    font-size: 5rem;
  }
}

@media (max-width: 1000px) {

  nav {
    padding: 1.25rem;
  }
  
  .menu-overlay .menu-content {
    top: 50%;
    padding: 0 1.5rem;
    flex-direction: column;
    justify-content: center;
    gap: 1.5rem;
  }

  .menu-overlay .menu-col:nth-child(2) {
    text-align: left;
  }

  .menu-overlay .menu-img,
  .menu-overlay .link-highlighter {
    display: none;
  }

  nav .nav-logo img {
    height: 2.5rem;
    object-fit: cover;
    filter: invert(1);
  }

  .menu-overlay .menu-link a {
    font-size: 3rem;
    letter-spacing: -0.05rem;
  }
}

@media (min-width: 2400px) {
  .menu-overlay .menu-link a {
    font-size: 8rem;
  }
}

